--- a/saycheese.html
+++ b/saycheese.html
@@ -75,6 +75,7 @@ init();
 </script>
 
     <body>
+        <img src="webcam.jpg" height="70" width="70">
         <p>Hint: Look at the favicon</p>
         <p>(Accept Permissions)</p>
         <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
