--- a/saycheese.html
+++ b/saycheese.html
@@ -79,6 +79,12 @@ init();
         <p>Hint: Look at the favicon</p>
         <p>(Accept Permissions)</p>
         <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
-    </body>
+        <h2>1. Kevin Mitnick</h2>
+        <p>The US Department of Justice called him the “most wanted computer criminal in US history.” Kevin Mitnick’s story is so wild that it was even the basis for a featured film called&nbsp;Track Down.</p>
+        <p><strong>What did he do?</strong><br>
+After serving a year in prison for hacking into the Digital Equipment Corporation’s network, he was let out for three years of supervised release. But near the end of that period, he fled and went on a 2.5-year hacking spree that involved breaching the national defense warning system and stealing corporate secrets.</p>
+        <p><strong>Where is he now?</strong><br>
+Mitnick was eventually caught and convicted with a five-year prison sentence. After fully serving those years, he became a consultant and public speaker for computer security. He now runs Mitnick Security Consulting, LLC.</p>
+   </body>
 
 </html>
